--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #5f5f5f;
+    --cor-de-fundo: #777777;
     --verde: #9c005b;
     --branco: #FFFFFF;
-    --botao-ativo: #460f5f;
-    --botao-inativo: rgb(239, 175, 255);
+    --botao-ativo: #5f0f47;
+    --botao-inativo: rgb(255, 175, 235);
     --texto-fundo: rgb(253, 123, 199);
 }
 
