--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --cor-de-fundo: #777777;
-    --verde: #9c005b;
+    --verde: #9e055e;
     --branco: #FFFFFF;
     --botao-ativo: #5f0f47;
     --botao-inativo: rgb(255, 175, 235);
