--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #777777;
+    --cor-de-fundo: #adadad;
     --verde: #9e055e;
     --branco: #FFFFFF;
     --botao-ativo: #5f0f47;
